--- a/WpfApp1/Appointments.xaml
+++ b/WpfApp1/Appointments.xaml
@@ -182,6 +182,7 @@
                     </StackPanel>
                 </ScrollViewer>
             </Grid>
+            
 
             <TextBlock Text="Next appointment in:" Foreground="#54382f" FontSize="30" FontWeight="SemiBold" FontFamily="Inter" TextAlignment="Left" Margin="167,561,1017,196"></TextBlock>
             <Grid Margin="167,608,880,139">
@@ -204,7 +205,7 @@
                             <TextBlock Name="patientIDtxt" Text="#1234" FontSize="20" FontWeight="Regular" FontFamily="Inter" Foreground="Gray" TextAlignment="Center" Margin="0,63,0,0"></TextBlock>
                         </Grid>
                         <Grid Width="433">
-                            <TextBlock Name="appTypetxt" Text="Appointment Type" FontSize="30" FontWeight="Medium" FontFamily="Inter" Foreground="#54382f" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
+                            <TextBlock Name="appTypetxt" Text="Appointment Time" FontSize="30" FontWeight="Medium" FontFamily="Inter" Foreground="#54382f" TextAlignment="Center" HorizontalAlignment="Center" VerticalAlignment="Center"></TextBlock>
                         </Grid>
                         <Grid Width="433">
                             <Button Name="fileBTN" Content="open file" Foreground="White" FontFamily="Inter" FontWeight="Medium" FontSize="25" Height="60" Width="250" Background="#54382f" Click="emr_Click" >
