--- a/WpfApp1/Prescriptions.xaml
+++ b/WpfApp1/Prescriptions.xaml
@@ -5,43 +5,52 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:WpfApp1"
         mc:Ignorable="d"
-        Title="Prescription" Height="450" Width="800">
+        Title="Prescription" Height="477" Width="800">
     <Grid>
+        
         <StackPanel>
-            <TextBlock Text="Doctor Jane" FontSize="16" Margin="5"/>
+            <TextBlock  Text="Doctor Name: Jane Smith" FontSize="16" Width="698" RenderTransformOrigin="-2.669,0.562"/>
 
 
             <!-- Patient Information -->
-            <TextBlock Text="Patient Information" FontSize="16" Margin="5"/>
-            <TextBlock Text="Name: John Doe" FontSize="14" Margin="5"/>
-            <TextBlock Text="ID: 123456" FontSize="14" Margin="5"/>
-            <TextBlock Text="Date" FontSize="16" Width="776"/>
+            <TextBlock Text="Patient Information" FontSize="16" Margin="5" Width="700"/>
+            <TextBlock  Text="Name" FontSize="14" Width="701" Height="24"/>
+            <TextBox TextWrapping="Wrap" x:Name="PatientNameTextBox" Width="803"/>
+            <TextBlock Text="ID: " FontSize="14" Margin="5"/>
+            <TextBox TextWrapping="Wrap" x:Name="PatientID" Width="799"/>
+            <TextBlock Text="Date" FontSize="16" Width="797"/>
 
             <!-- Date -->
-            <DatePicker Name="DatePicker" FontSize="14" Margin="5"/>
+            <DatePicker x:Name="DatePicker" FontSize="14" Margin="5"/>
             <TextBlock Text="Medicine" FontSize="16" Margin="5"/>
-            <ComboBox Name="MedicineComboBox" FontSize="14" Margin="5">
+            <ComboBox x:Name="MedicineComboBox" FontSize="14" Margin="5">
                 <ComboBoxItem Content="Fluoxetine"/>
                 <ComboBoxItem Content="Sertraline"/>
                 <ComboBoxItem Content="Lithium"/>
                 <!-- Add more medicines as ComboBoxItems -->
+
+
             </ComboBox>
             <TextBlock Text="Dosage" FontSize="16" Margin="5"/>
-            <ComboBox Name="Dosage" FontSize="14" Margin="5">
+            <ComboBox x:Name="Dosage" FontSize="14" Margin="5">
                 <ComboBoxItem Content="10 mmg"/>
                 <ComboBoxItem Content="20 mmg"/>
                 <ComboBoxItem Content="30 mmg"/>
                 <!-- Add more options as needed -->
+
+
             </ComboBox>
             <TextBlock Text="Number of Days" FontSize="16" Margin="5"/>
-            <ComboBox Name="NumberOfDaysComboBox" FontSize="14" Margin="5">
+            <ComboBox x:Name="NumberOfDaysComboBox" FontSize="14" Margin="5">
                 <ComboBoxItem Content="1"/>
                 <ComboBoxItem Content="2"/>
                 <ComboBoxItem Content="3"/>
                 <!-- Add more options as needed -->
+
+
             </ComboBox>
 
-            <Button Content="Save Prescription" Width="150" Margin="5" HorizontalAlignment="Center" Background="#9bb169"/>
+            <Button Content="Save Prescription" Width="150" Margin="5" HorizontalAlignment="Center" Background="#9bb169" Click="SaveBtn_Click"/>
             <Button Content="Close" Width="154" Background="#9bb169" Click="CloseBtn_Click"/>
 
 
